src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__snapshot_tests__snapshot_ai_popup_response_state.snap
---
source: src/ai/ai_render_tests/snapshot_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ╭ Anthropic ───────── claude-3-5-sonnet... ╮ "
"                                                       │                                          │ "
"                                                       │ The error in your query `.foo[` is a     │ "
"                                                       │ missing closing bracket.                 │ "
"                                                       │                                          │ "
"                                                       │ Try using `.foo[]` to iterate over the   │ "
"                                                       │ array, or `.foo[0]` to access the first  │ "
"                                                       │ element.                                 │ "
"                                                       │ ──────────────────────────────────────── │ "
"                                                       │ ›  Ask about this query or data…         │ "
"                                                       │                                          │ "
"                                                       ╰─────── Ctrl+G Chat • Ctrl+A Close ───────╯ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
