src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__snapshot_tests__snapshot_ai_popup_with_selected_suggestion.snap
---
source: src/ai/ai_render_tests/snapshot_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ╭ Anthropic ────── (2/3) claude-3-5-son... ╮ "
"                                                       │                                          █ "
"                                                       │ 1. [Fix] .users[] | select(.active)      █ "
"                                                       │    Filters to only active users          █ "
"                                                       │                                          █ "
"                                                       │ 2. [Query] .users[] | .email             █ "
"                                                       │    Extracts email addresses              █ "
"                                                       │                                          █ "
"                                                       │ 3. [Optimize] .users | map(.name)        █ "
"                                                       │ ──────────────────────────────────────── ║ "
"                                                       │ ›  Ask about this query or data…         │ "
"                                                       │                                          │ "
"                                                       ╰↑↓ Select • Enter Apply Selection • Ctrl+G╯ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
