src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__snapshot_tests__snapshot_ai_scrollbar_at_bottom.snap
---
source: src/ai/ai_render_tests/snapshot_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ╭ Anthropic ────── (7/7) claude-3-5-son... ╮ "
"                                                       │                                          ║ "
"                                                       │    Fifth user                            ║ "
"                                                       │                                          ║ "
"                                                       │ [Optimize] .users[5]                     ║ "
"                                                       │    Sixth user                            ║ "
"                                                       │                                          ║ "
"                                                       │ [Fix] .users[6]                          █ "
"                                                       │    Seventh user                          █ "
"                                                       │ ──────────────────────────────────────── █ "
"                                                       │ ›  Ask about this query or data…         │ "
"                                                       │                                          │ "
"                                                       ╰ • Alt+↑↓ Select • Enter Apply Selection •╯ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
