src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__snapshot_tests__snapshot_ai_scrollbar_at_middle.snap
---
source: src/ai/ai_render_tests/snapshot_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ╭ Anthropic ────── (3/7) claude-3-5-son... ╮ "
"                                                       │                                          ║ "
"                                                       │                                          █ "
"                                                       │ 2. [Query] .users[1]                     █ "
"                                                       │    Second user                           █ "
"                                                       │                                          ║ "
"                                                       │ 3. [Optimize] .users[2]                  ║ "
"                                                       │    Third user                            ║ "
"                                                       │                                          ║ "
"                                                       │ ──────────────────────────────────────── ║ "
"                                                       │ ›  Ask about this query or data…         │ "
"                                                       │                                          │ "
"                                                       ╰ • Alt+↑↓ Select • Enter Apply Selection •╯ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
