src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__snapshot_tests__snapshot_ai_scrollbar_at_top.snap
---
source: src/ai/ai_render_tests/snapshot_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ┌ Anthropic ────── (1/7) claude-3-5-son... ┐ "
"                                                       │1. [Fix] .users[0]                        █ "
"                                                       │   First user                             █ "
"                                                       │                                          █ "
"                                                       │2. [Next] .users[1]                       ║ "
"                                                       │   Second user                            ║ "
"                                                       │                                          ║ "
"                                                       │3. [Optimize] .users[2]                   ║ "
"                                                       │   Third user                             ║ "
"                                                       └1-5 or Alt+↑↓+Enter to apply | Ctrl+A to c┘ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
